<resources>
    <string name="app_name">Lab1</string>
    <string name="area_circle">0</string>
    <string name="area_square">0</string>
    <string name="enter_side">Введите данные</string>
    <string name="equals">Расчитать площадь</string>
    <string name="area">Area</string>
    <string name="circle">Круг</string>
    <string name="square">Квадрат</string>
    <string name="_0">0</string>
    <string name="rectangle">Прямоугольник</string>
</resources>